--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,7 +34,7 @@ main{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
@@ -52,4 +52,13 @@ main{
 #login > #formulario{
     display: block;
     padding: 10px;
+}
+
+#formulario{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#formulario > p{
+    font-size: 0.8em;
 }
