--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -9,9 +9,7 @@ Desktop: 992px até 1200px
 Grandes telas: acima de 1200px
 */
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
-
-    /* CONFIGURAÇÃO PARA TABLET */
+@media screen and (min-width: 768px) and (max-width: 992px) { /* CONFIGURAÇÃO PARA TABLET */
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
@@ -21,21 +19,19 @@ Grandes telas: acima de 1200px
         height: 280px;
     }
 
-    section#login>div#imagem {
+    section#login > div#imagem {
         float: left;
         width: 30%;
         height: 100%;
     }
 
-    section#login>div#formulario {
+    section#login > div#formulario {
         float: right;
         width: 70%;
     }
 }
 
-@media screen and (min-width: 992px) {
-
-    /* CONFIGURAÇÕES PARA DESKTOP */
+@media screen and (min-width: 992px) { /* CONFIGURAÇÕES PARA DESKTOP */
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
@@ -45,22 +41,22 @@ Grandes telas: acima de 1200px
         height: 350px;
     }
 
-    section#login>div#imagem {
+    section#login > div#imagem {
         float: right;
         width: 50%;
         height: 100%;
     }
 
-    section#login>div#formulario {
+    section#login > div#formulario {
         float: left;
         width: 50%;
     }
 
-    div#formulario>h1 {
+    div#formulario > h1 {
         font-size: 2em;
     }
 
-    div#formulario>p {
+    div#formulario > p {
         font-size: 1em;
         margin: 20px 0px;
     }
